added develop dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ packages = [{include = "test_github_actions"}]
 [tool.poetry.dependencies]
 python = "^3.8"
 
+[tool.poetry.group.dev.dependencies]
+# Get the latest revision on the branch named "next"
+poetry-versioning = { git = "git@github.com:ehn-jloarca/poetry-versioning.git", branch = "develop" }
 
 [build-system]
 requires = ["poetry-core"]
