fix Ãpermissions for shell script

--- a/.github/workflows/dev_check_latest_version.yml
+++ b/.github/workflows/dev_check_latest_version.yml
@@ -30,5 +30,7 @@ jobs:
     #  ---  execute the "update" shell script  ---
     #----------------------------------------------
     - name: Run update script
-      run: ./.github/scripts/update.sh
+      run: |
+        chmod +x ./.github/scripts/update.sh
+        ./.github/scripts/update.sh
       shell: bash
