--- a/.github/workflows/dev_check_latest_version.yml
+++ b/.github/workflows/dev_check_latest_version.yml
@@ -31,6 +31,8 @@ jobs:
     #----------------------------------------------
     - name: Run update script
       run: |
+        eval `ssh-agent -s`
+        ssh-add - <<< '${{ secrets.POETRY_VERSIONING_SSH_KEY }}'
         chmod +x ./.github/scripts/update.sh
         ./.github/scripts/update.sh
       shell: bash
